提交到bintary的注意事项
1、pom文件中需要配置上提交到bintary的url：
<distributionManagement>
        <repository>
            <id>itlgl</id>
            <url>https://api.bintray.com/maven/itlgl/maven/byteutil/;publish=1</url>
        </repository>
    </distributionManagement>
url中的id和settings.xml中的id对应
2、settings.xml文件需要放置到<userdir>/.m2/文件夹下才能起作用，放在项目目录下是没有作用的

--- a/pom.xml
+++ b/pom.xml
@@ -67,15 +67,8 @@
 	
 	<distributionManagement>
         <repository>
-            <id>byteutil</id>
-            <url>https://api.bintray.com/maven/${bintray.subject}/${bintray.repo}/${bintray.package}/;publish=1</url>
+            <id>itlgl</id>
+            <url>https://api.bintray.com/maven/itlgl/maven/byteutil/;publish=1</url>
         </repository>
     </distributionManagement>
-	
-	<!-- <distributionManagement>
-		<repository>
-			<id>byteutil</id>
-			<url>file:D:/github/mvn-repo/</url>
-		</repository>
-	</distributionManagement> -->
 </project>
