修改settings.xml和pom.xml文件，id修改为bintray-repo-maven，和pom文件对应；修改readme文件；
这个文件只是一个备份文件，文件需要放置在<useridr>/.m2/文件夹下才能起作用

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 	
 	<distributionManagement>
         <repository>
-            <id>itlgl</id>
+            <id>bintray-repo-maven</id>
             <url>https://api.bintray.com/maven/itlgl/maven/byteutil/;publish=1</url>
         </repository>
     </distributionManagement>
