--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
-jdk:
-  - oraclejdk8
+install: skip
+
+os: linux
+dist: trusty
+jdk: oraclejdk8
+
+script:
+  - ./gradlew build --scan -s
