--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-VERSION_NAME=0.0.7
+VERSION_NAME=0.1.0
 GROUP=com.itlgl
 
 POM_DESCRIPTION=Byte data processing tools
@@ -20,7 +20,7 @@ POM_PACKAGING=jar
 # upload to Maven Central
 
 # generate aar in local
-LOCAL_REPOSITORY_URL=file://D:/temp/
+LOCAL_REPOSITORY_URL=file://C:/itlgl/temp
 
 # upload to Jcenter
 JCENTER_RELEASE_REPOSITORY_URL=https://api.bintray.com/maven/itlgl/maven/byteutil/;publish=1
